迁移表到数据库

--- a/views/auth-add.html
+++ b/views/auth-add.html
@@ -28,7 +28,7 @@
                 <div class="layui-input-inline"  style="width: 200px;">
                     <select name="interest" lay-filter="aihao" name="role_parent_id" id="role_parent_id">
                         <option value="0">--无--</option>
-                        <option value="{{ permissions.id }}">权限名称</option>
+{{/*                        <option value="{{ permissions.id }}">权限名称</option>*/}}
                     </select>
                 </div>
                 <div class="layui-form-mid layui-word-aux">无上级权限请留空</div>
