--- a/views/auth-list.html
+++ b/views/auth-list.html
@@ -92,7 +92,7 @@
               <a href="" class="layui-btn layui-btn-mini layui-btn-normal">
                 <i class="layui-icon">&#xe642;</i>编辑
               </a>
-              <input type="hidden" value="{{ auth.id}}">
+{{/*              <input type="hidden" value="{{ auth.id}}">*/}}
               <a class="layui-btn layui-btn-mini layui-btn-danger delete_btn">
                 <i class="layui-icon">&#x1006;</i>删除
               </a>
