--- a/views/menu-list.html
+++ b/views/menu-list.html
@@ -90,10 +90,10 @@
               <!--<i class="layui-icon">&#xe601;</i>停用-->
             <!--</a>-->
 
-            <a href="{% url 'manage_menu:to_menu_edit' %}?id={{ menuManage.id }}" class="layui-btn layui-btn-mini layui-btn-normal">
+{{/*            <a href="{% url 'manage_menu:to_menu_edit' %}?id={{ menuManage.id }}" class="layui-btn layui-btn-mini layui-btn-normal">*/}}
               <i class="layui-icon">&#xe642;</i>编辑
             </a>
-            <input type="hidden" value="{{ menuManage.id}}">
+{{/*            <input type="hidden" value="{{ menuManage.id}}">*/}}
             <a class="layui-btn layui-btn-mini layui-btn-danger delete_btn">
               <i class="layui-icon">&#x1006;</i>删除</a>
           </td>
