--- a/views/login/login.html
+++ b/views/login/login.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../static/css/font.css">
 	<link rel="stylesheet" href="../static/css/xadmin.css">
     <link rel="icon" href="../static/images/zlkt.ico" type="image/x-icon"/>
-    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../../static/js/ztree/jquery.min.js"></script>
     <script src="../static/lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="../static/js/xadmin.js"></script>
 
@@ -23,21 +23,43 @@
         <div id="darkbannerwrap"></div>
         
         <form method="post" class="layui-form" >
-            <input name="username" placeholder="用户名"  type="text" lay-verify="required" class="layui-input" >
+            <input id="username" placeholder="用户名"  type="text" lay-verify="required" class="layui-input" >
             <hr class="hr15">
-            <input name="password" lay-verify="required" placeholder="密码"  type="password" class="layui-input">
+            <input id="password" lay-verify="required" placeholder="密码"  type="password" class="layui-input">
             <hr class="hr15">
             <div>
-                <input placeholder="验证码" type="text" class="layui-input" style="width: 180px;float: left">
-                <img src="../static/images/code.jpg" style="width: 140px;height: 50px;float: right"/>
+                <input id="captcha" placeholder="验证码" type="text" class="layui-input" style="width: 180px;float: left">
+                <img id="captcha_img" src="../static/images/code.jpg" style="cursor: pointer;width: 140px;height: 50px;float: right"/>
+                <input type="hidden" value="{{.captcha.Id}}" id="captcha_id">
             </div>
             <hr class="hr15">
-            <input value="登录" lay-submit lay-filter="login" style="width:100%;" type="submit">
+            <input value="登录" lay-submit lay-filter="login" style="width:100%;" type="button" id="btn">
             <hr class="hr20" >
         </form>
     </div>
 
     <script>
+        $("#captcha_img").attr("src",{{.captcha.BS64}});
+
+        $("#captcha_img").click(getCaptcha);
+
+        function getCaptcha() {
+            $.ajax({
+                url:"/change_captcha",
+                data:{},
+                type:"GET",
+                success:function (data) {
+                    if (data["Code"]!=200) {
+                        alert(data["Msg"])
+                    } else {
+                        $("#captcha_img").attr("src",data.BS64);
+                        $("#captcha_id").attr("value",data.Id);
+                    }
+                },
+
+            })
+        }
+
         $(function  () {
             layui.use('form', function(){
               var form = layui.form;
@@ -47,10 +69,35 @@
               //监听提交
               form.on('submit(login)', function(data){
                 // alert(888)
-                layer.msg(JSON.stringify(data.field),function(){
-                    location.href='index.html'
-                });
-                return false;
+                var username = $("#username").val();
+                var password = $("#password").val();
+                var captcha = $("#captcha").val();
+                var captcha_id = $("#captcha_id").val();
+                $.ajax({
+                    url: "/",
+                    type: "POST",
+                    data:{
+                        "username":username,
+                        "password":password,
+                        "captcha":captcha,
+                        "captcha_id":captcha_id
+                    },
+                    success:function (data) {
+                        if (data["code"]==200) {
+                            window.location.replace("http://www.baidu.com");
+                        } else {
+                            alert(data["msg"])
+                            getCaptcha()
+                        }
+                    },
+                    error:function () {
+
+                    },
+                })
+                // layer.msg(JSON.stringify(data.field),function(){
+                //     location.href='index.html'
+                // });
+                // return false;
               });
             });
         })
