--- a/views/user/user-list.html
+++ b/views/user/user-list.html
@@ -8,11 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="../static/css/font.css">
-    <link rel="stylesheet" href="../static/css/xadmin.css">
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/xadmin.css">
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../static/lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../static/js/xadmin.js"></script>
+    <script type="text/javascript" src="../../static/lib/layui/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
       <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
@@ -51,26 +51,52 @@
             <th>
               <div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>
             </th>
-            <th>ID</th>
             <th>用户名</th>
+            <th>年龄</th>
             <th>性别</th>
             <th>手机</th>
-            <th>邮箱</th>
             <th>地址</th>
             <th>加入时间</th>
             <th>状态</th>
             <th>操作</th></tr>
         </thead>
         <tbody>
+          {{range .users}}
+            <tr>
+              <td>
+                <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
+              </td>
+              <td>{{.Username}}</td>
+              <td>{{.Age}}</td>
+              <td>{{.Gender}}</td>
+              <td>{{.Phone}}</td>
+              <td>{{.Addr}}</td>
+              <td>{{.Addr}}</td>
+              <td class="td-status">
+                <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
+              <td class="td-manage">
+                <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
+                  <i class="layui-icon">&#xe601;</i>
+                </a>
+                <a title="编辑"  onclick="x_admin_show('编辑','member-edit.html',600,400)" href="javascript:;">
+                  <i class="layui-icon">&#xe642;</i>
+                </a>
+                <a onclick="x_admin_show('修改密码','member-password.html',600,400)" title="修改密码" href="javascript:;">
+                  <i class="layui-icon">&#xe631;</i>
+                </a>
+                <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
+                  <i class="layui-icon">&#xe640;</i>
+                </a>
+              </td>
+            </tr>
+          {{end}}
           <tr>
             <td>
               <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
             </td>
-            <td>1</td>
             <td>小明</td>
             <td>男</td>
             <td>13000000000</td>
-            <td>admin@mail.com</td>
             <td>北京市 海淀区</td>
             <td>2017-01-01 11:11:42</td>
             <td class="td-status">
