功能列表分页函数

--- a/views/auth/auth-list.html
+++ b/views/auth/auth-list.html
@@ -12,11 +12,6 @@
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="/static/lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="/static/js/xadmin.js"></script>
-    <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
-    <!--[if lt IE 9]>
-    <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
-    <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body>
@@ -44,15 +39,17 @@
                 </select>
             </div>
 
-            <input value="{{.keyword}}" type="text" name="username" placeholder="请输入权限名称" autocomplete="off" class="layui-input">
+            <input value="{{.keyword}}" type="text" name="username" placeholder="请输入权限名称" autocomplete="off"
+                   class="layui-input">
             <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
         </form>
     </div>
     <xblock>
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-        <button class="layui-btn" onclick="x_admin_show('添加菜单','./auth-add.html')"><i class="layui-icon"></i>添加
+        <button class="layui-btn" onclick="x_admin_show('添加菜单','{{urlfor "AuthController.ToAdd"}}',600,700)"><i
+                    class="layui-icon"></i>添加
         </button>
-        <span class="x-right" style="line-height:40px">共有数据：88 条</span>
+        <span class="x-right" style="line-height:40px">共有数据：{{.count}} 条</span>
     </xblock>
     <table class="layui-table">
         <thead>
@@ -80,7 +77,13 @@
                 </td>
                 <td>{{.Id}}</td>
                 <td>{{.AuthName}}</td>
-                <td>{{urlfor .UrlFor}}</td>
+                <td>
+                    {{if eq .UrlFor "#"}}
+                        #
+                    {{else}}
+                        {{urlfor .UrlFor}}
+                    {{end}}
+                </td>
                 <td>{{.Pid}}</td>
                 <td>{{.Desc}}</td>
                 <td>{{date .CreateTime "Y-m-d H:m:s"}}</td>
