--- a/views/user/user-add.html
+++ b/views/user/user-add.html
@@ -7,14 +7,14 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="../../static/css/font.css">
-    <link rel="stylesheet" href="../../static/css/sweetalert.css">
-    <link rel="stylesheet" href="../../static/css/xadmin.css">
-    <script src="../../static/js/sweetalert.min.js"></script>
-    <script src="../../static/js/ions_alert.js"></script>
-    <script type="text/javascript" src="../../static/js/ztree/jquery.min.js"></script>
-    <script type="text/javascript" src="../../static/lib/layui/layui.js" charset="utf-8"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
+    <link rel="stylesheet" href="/static/css/font.css">
+    <link rel="stylesheet" href="/static/css/sweetalert.css">
+    <script src="/static/js/ions_alert.js"></script>
+    <script src="/static/js/sweetalert.min.js"></script>
+    <link rel="stylesheet" href="/static/css/xadmin.css">
+    <script type="text/javascript" src="/static/js/ztree/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/lib/layui/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/static/js/xadmin.js"></script>
 </head>
 
 <body>
