--- a/views/auth/role-auth-add.html
+++ b/views/auth/role-auth-add.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="../static/css/font.css">
-    <link rel="stylesheet" href="../static/css/xadmin.css">
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/xadmin.css">
     <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
       <!--<script type="text/javascript" src="./lib/layui/layui.js" charset="utf-8"></script>-->
       <!--会冲突-->
@@ -20,11 +20,11 @@
       <!--<script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>-->
       <!--<script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>-->
 
-      <link rel="stylesheet" href="../static/css/bootstrapStyle/bootstrapStyle.css" type="text/css">
-      <script type="text/javascript" src="../static/js/ztree/jquery.min.js"></script>
-      <script type="text/javascript" src="../static/js/ztree/jquery.ztree.core.js"></script>
-      <script type="text/javascript" src="../static/js/ztree/jquery.ztree.excheck.js"></script>
-      <script type="text/javascript" src="../static/js/ztree/jquery.ztree.exedit.js"></script>
+      <link rel="stylesheet" href="../../static/css/bootstrapStyle/bootstrapStyle.css" type="text/css">
+      <script type="text/javascript" src="../../static/js/ztree/jquery.min.js"></script>
+      <script type="text/javascript" src="../../static/js/ztree/jquery.ztree.core.js"></script>
+      <script type="text/javascript" src="../../static/js/ztree/jquery.ztree.excheck.js"></script>
+      <script type="text/javascript" src="../../static/js/ztree/jquery.ztree.exedit.js"></script>
 
     <![endif]-->
 
